autoscaler/virtual-kubelet-autoscaler/vk-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: vk-pod-demo
  name: vk-pod-demo
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: vk-pod-demo
  template:
    metadata:
      labels:
        app: vk-pod-demo
    spec:
      containers:
      - image: nginx:1.7.9
        name: scale-hpa-pod-demo
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
