autoscaler/virtual-kubelet-autoscaler/vk-autoscaler-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vk-autoscaler-metrics-service
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: vk-pod-demo
  type: ClusterIP
